# Fraud-Detection-MLOps-Pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: drift_check.yml  ml_pipeline.yml  validate_data.yml
data/reference/: train_distribution.csv
infra/: app_runner.yaml  ecs_fargate.yaml
scripts/: check_registry.py  generate_synthetic_data.py  leakage_check.py  probe_pyfunc.py  promote_model.py  test_live_server.py
src/dashboard/: __init__.py  app.py
src/data/: download.py  validate.py
src/features/: engineer.py
src/monitoring/: drift_detector.py  simulate_drift.py
src/serving/: __init__.py  app.py  db.py  schemas.py
src/training/: train.py
tests/: test_api_contract.py  test_data_validation.py  test_drift_detector.py  test_feature_engineering.py
